# credit-risk

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: docker-image.yml
model/: config.py  main.py
model/etl/: extract.py  load.py  transform.py
model/train/: model_train.py
view/: main.py
