[project]
name = "credit-risk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "dotenv>=0.9.9",
    "lightgbm>=4.6.0",
    "mlflow>=3.0",
    "numpy==2.3.*",
    "pandas<3",
    "plotly>=6.8.0",
    "protobuf>=7.35.1",
    "scikit-learn>=1.9.0",
    "shap>=0.52.0",
    "streamlit>=1.58.0",
    "xgboost>=3.3.0",
]
